--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^4.1",
+        "pestphp/pest-plugin-browser": "^4.1",
         "pestphp/pest-plugin-laravel": "^4.0",
+        "pestphp/pest-plugin-livewire": "^4.0",
         "rector/rector": "^2.1"
     },
     "autoload": {
@@ -66,9 +68,15 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "ide-helper": [
+            "@php artisan ide-helper:generate",
+            "@php artisan ide-helper:models -M -F helpers/model_helpers.php",
+            "@php artisan ide-helper:meta",
+            "@php artisan @php artisan ide-helper:eloquent"
         ]
     },
-    "extra": {
+        "extra": {
         "laravel": {
             "dont-discover": []
         }
