--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.12.2",
         "concurrently": "^9.2.1",
         "laravel-vite-plugin": "^2.0.1",
+        "playwright": "^1.56.1",
         "tailwindcss": "^4.1.15",
         "vite": "^7.1.11"
     },
